--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section class="page" id="p3" style="justify-content:center;">
         <canvas id="waterfall-canvas"></canvas>
         <div class="glass-card" id="btn-cacho" style="text-align:center;">
-            <button class="premium-btn" onclick="ligarCachoeira()">VER TEMPO VOAR</button>
+            <button class="premium-btn" onclick="ligarCachoeira()">Veja a quantas horas eu te incomodo😆</button>
         </div>
         <div id="area-timer" style="display:none; text-align:center; width:100%; z-index:20;">
             <div class="glass-card" style="background: rgba(0,0,0,0.9); padding:50px 10px; border: 1px solid var(--blue);">
