--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         :root { --neon-blue: #007aff; --neon-red: #ff3b30; --neon-green: #39ff14; --gold: #ffd700; }
         * { box-sizing: border-box; margin: 0; padding: 0; -webkit-font-smoothing: antialiased; }
-        body { background: #000; color: #fff; font-family: 'Montserrat', sans-serif; height: 100vh; width: 100vw; overflow: hidden; touch-action: none; }
+        body { background: #000; color: #fff; font-family: 'Montserrat', sans-serif; height: 100vh; width: 100vw; overflow: hidden; touch-action: pan-y; }
 
         #star-canvas, #heart-canvas { position: fixed; inset: 0; z-index: 1; pointer-events: none; }
         .progress-bar { position: fixed; top: 0; left: 0; height: 3px; background: var(--neon-blue); width: 0%; z-index: 10000; box-shadow: 0 0 15px var(--neon-blue); transition: width 0.4s ease; }
@@ -62,7 +62,7 @@
 
         .main-title { font-family: 'Playfair Display', serif; font-size: clamp(1.5rem, 6vw, 2.2rem); color: var(--neon-red); text-align: center; margin-bottom: 30px; text-shadow: 0 0 12px rgba(255,59,48,0.6); }
         #viewport { display: flex; width: 400vw; height: 100%; transition: transform 0.7s cubic-bezier(0.23, 1, 0.32, 1); position: relative; z-index: 10; }
-        .page { width: 100vw; height: 100vh; padding: 40px 20px 140px; overflow-y: auto; scrollbar-width: none; }
+        .page { width: 100vw; height: 100vh; padding: 40px 20px 140px; overflow-y: auto; overflow-x: hidden; -webkit-overflow-scrolling: touch; }
         
         #splash { position: fixed; inset: 0; background: #000; z-index: 9999; display: flex; align-items: center; justify-content: center; transition: 1.2s cubic-bezier(0.4, 0, 0.2, 1); cursor: pointer; }
         .dots { position: fixed; bottom: 40px; left: 50%; transform: translateX(-50%); display: flex; gap: 14px; z-index: 1000; }
@@ -166,7 +166,7 @@
     const TXT1 = "Desde o dia 08 de Maio de 2025, minha vida se tornou um reflexo do seu sorriso... <span class='key-red'>eu te amo</span>, minha <span class='key-green'>jacaré</span>! 🐊❤️";
     const TXT2 = "E cá estamos minha princesaa, no nosso nono mês e foram definitivamente os melhores da minha vida, e, o mais legal é que simplesmente aconteceu. No começo, eram apenas <span class='key-blue'>olhares</span>, mas de repente se tornaram olhares cheio de sentimentos e <span class='key-golden'>intensidade</span> as nossas <span class='key-blue'>conversas</span> construiu algo que eu nem sabia que precisava tanto. É engraçado como a gente se encaixa, se entende, se desculpa e se \"sente\" Você tem esse jeito de tornar as coisas <span class='key-blue'>leves</span>, até quando o mundo lá fora parece pesado demais. Gosto da forma como você ri das minhas bobagens e do jeito que eu te irrrito, de como a gente consegue ficar em silêncio sem que isso seja desconfortável. <br><br>Não estou aqui para te dar promessas vazias meu pedacinho de <span class='key-golden'>ouro</span>. Quero te dar o meu melhor, mesmo nos dias em que eu não estiver tão bem. Estar com você me faz querer ser alguém mais atento, mais presente. Você é minha <span class='key-red'>Princesa</span>, aquela que eu procuro quando as coisas dão certo e a primeira que eu quero por perto quando tudo parece incerto. É uma conexão que vai além do físico, é algo na alma, uma vontade genuína de ver você crescer e estar lá para aplaudir cada conquista sua. <br><br>Você é minha a <span class='key-green'>menina</span>, minha teimosa favorita e a dona do meu <span class='key-blue'>sorriso</span> e que desarma qualquer defesa minha. Eu escolho você todos os dias, com todos os seus detalhes, manias e essa intensidade que só você tem. O que a gente tem é real, é cru e é a coisa mais bonita que eu já tive a sorte de viver. Obrigado por ser exatamente quem você é, por não mudar para caber em nada e por me deixar fazer parte da sua história. Eu não preciso de mais nada quando estou do seu lado. <span class='key-red'>eu te amo</span> de um jeito que as palavras mal conseguem alcançar, mas que meu <span class='key-red'>coração</span> sente em cada batida.";
 
-    let typedPages = { p1: false, p2: false }, cur = 0;
+    let typedPages = { p1: false, p2: false }, cur = 0, isWheeling = false;
     const bgMusic = document.getElementById('bg-music'), video = document.getElementById('main-video'), pBar = document.getElementById('p-bar');
 
     function typeWriter(text, elementId, speed, key) {
@@ -203,10 +203,7 @@
 
     function updatePBar() { pBar.style.width = ((cur + 1) / 4) * 100 + "%"; }
 
-    function jumpTo(idx) {
-        cur = idx;
-        applyNavigation();
-    }
+    function jumpTo(idx) { cur = idx; applyNavigation(); }
 
     function navigate(dir) {
         if(dir === 'next' && cur < 3) cur++; else if(dir === 'prev' && cur > 0) cur--;
@@ -217,26 +214,34 @@
         updatePBar();
         document.getElementById('viewport').style.transform = `translateX(-${cur * 100}vw)`;
         document.querySelectorAll('.dot').forEach((d, i) => d.classList.toggle('active', i === cur));
-        
         if(cur === 1) {
             bgMusic.volume = 0.1;
             video.play().catch(() => {});
             if(!typedPages.p2) typeWriter(TXT2, "type-p2", 8, 'p2');
-        } else { 
-            video.pause(); bgMusic.volume = 1.0; 
-        }
+        } else { video.pause(); bgMusic.volume = 1.0; }
         if(cur === 3) {
             setTimeout(() => document.getElementById('final-1').classList.add('active'), 300);
             setTimeout(() => document.getElementById('final-2').classList.add('active'), 1200);
         }
     }
 
+    // Touch Navigation
     let startX = 0;
     document.addEventListener('touchstart', e => startX = e.touches[0].clientX);
     document.addEventListener('touchend', e => {
         let diffX = startX - e.changedTouches[0].clientX;
-        if(Math.abs(diffX) > 50) navigate(diffX > 0 ? 'next' : 'prev');
+        if(Math.abs(diffX) > 70) navigate(diffX > 0 ? 'next' : 'prev');
     });
+
+    // Mouse Wheel Navigation
+    window.addEventListener('wheel', e => {
+        if(isWheeling) return;
+        if(Math.abs(e.deltaX) > 30) {
+            isWheeling = true;
+            navigate(e.deltaX > 0 ? 'next' : 'prev');
+            setTimeout(() => isWheeling = false, 800);
+        }
+    }, { passive: true });
 
     function setupStars() {
         const c = document.getElementById('star-canvas'), ctx = c.getContext('2d');
