--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         .page.active { opacity: 1; visibility: visible; z-index: 10; }
         
         .glass-card { 
-            background: rgba(5, 5, 5, 0.95); 
+            background: rgba(10, 10, 10, 0.95); 
             border: 1px solid rgba(255, 255, 255, 0.15); 
             border-radius: 20px; 
             padding: 18px; 
@@ -57,26 +57,30 @@
             max-height: 50dvh;
         }
 
-        /* Cores Neon Reforçadas */
+        /* Cores Neon - Forçadas para o Texto */
         .key-red { 
             color: #ff3b30 !important; 
             font-weight: 900 !important; 
-            text-shadow: 0 0 8px #ff3b30, 0 0 15px rgba(255,59,48,0.6) !important;
+            text-shadow: 0 0 8px #ff3b30, 0 0 15px rgba(255,59,48,0.5) !important;
+            display: inline-block;
         }
         .key-blue { 
             color: #007aff !important; 
             font-weight: 900 !important; 
-            text-shadow: 0 0 8px #007aff, 0 0 15px rgba(0,122,255,0.6) !important;
+            text-shadow: 0 0 8px #007aff, 0 0 15px rgba(0,122,255,0.5) !important;
+            display: inline-block;
         }
         .key-green { 
             color: #39ff14 !important; 
             font-weight: 900 !important; 
             text-shadow: 0 0 8px #39ff14, 0 0 15px rgba(57,255,20,0.6) !important;
+            display: inline-block;
         }
         .key-golden { 
             color: #ffd700 !important; 
             font-weight: 900 !important; 
             text-shadow: 0 0 8px #ffd700, 0 0 15px rgba(255,215,0,0.6) !important;
+            display: inline-block;
         }
         
         .main-title { font-family: 'Playfair Display', serif; font-size: 1.8rem; text-align: center; margin-bottom: 20px; }
@@ -164,7 +168,7 @@
     const TXT1 = "Desde o dia 08 de Maio de 2025, minha vida se tornou um reflexo do seu sorriso... <span class='key-red'>eu te amo</span>, minha <span class='key-green'>jacaré</span>! 🐊❤️";
     const TXT2 = "E cá estamos minha princesaa, no nosso nono mês e foram definitivamente os melhores da minha vida, e, o mais legal é que simplesmente aconteceu. No começo, eram apenas <span class='key-blue'>olhares</span>, mas de repente se tornaram olhares cheio de sentimentos e <span class='key-golden'>intensidade</span> as nossas <span class='key-blue'>conversas</span> construiu algo que eu nem sabia que precisava tanto. É engraçado como a gente se encaixa, se entende, se desculpa e se \"sente\" Você tem esse jeito de tornar as coisas <span class='key-blue'>leves</span>, até quando o mundo lá fora parece pesado demais. Gosto da forma como você ri das minhas bobagens e do jeito que eu te irrrito, de como a gente consegue ficar em silêncio sem que isso seja desconfortável. <br><br>Não estou aqui para te dar promessas vazias meu pedacinho de <span class='key-golden'>ouro</span>. Quero te dar o meu melhor, mesmo nos dias em que eu não estiver tão bem. Estar com você me faz querer ser alguém mais atento, mais presente. Você é minha <span class='key-red'>Princesa</span>, aquela que eu procuro quando as coisas dão certo e a primeira que eu quero por perto quando tudo parece incerto. É uma conexão que vai além do físico, é algo na alma, uma vontade genuína de ver você crescer e estar lá para aplaudir cada conquista sua. <br><br>Você é minha a <span class='key-green'>menina</span>, minha teimosa favorita e a dona do meu <span class='key-blue'>sorriso</span> e que desarma qualquer defesa minha. Eu escolho você todos os dias, com todos os seus detalhes, manias e essa intensidade que só você tem. O que a gente tem é real, é cru e é a coisa mais bonita que eu já tive a sorte de viver. Obrigado por ser exatamente quem você é, por não mudar para caber em nada e por me deixar fazer parte da sua história. Eu não preciso de mais nada quando estou do seu lado. <span class='key-red'>eu te amo</span> de um jeito que as palavras mal conseguem alcançar, mas que meu <span class='key-red'>coração</span> sente em cada batida.";
 
-    let current = 0, hasTypedP2 = false, fadeInterval;
+    let current = 0, hasTypedP2 = false;
     const bgMusic = document.getElementById('bg-music');
     const video = document.getElementById('main-video');
     const pages = document.querySelectorAll('.page');
@@ -196,40 +200,33 @@
         document.getElementById('p-bar').style.width = ((current + 1) / pages.length) * 100 + "%";
         document.querySelectorAll('.dot').forEach((d, i) => d.classList.toggle('active', i === current));
         if(current === 1) { 
-            fadeAudio(bgMusic, 0.1); video.play(); 
+            video.play(); 
             if(!hasTypedP2) { typeWriter(TXT2, "type-p2", 20); hasTypedP2 = true; } 
-        } else { video.pause(); fadeAudio(bgMusic, 0.6); }
-    }
-
-    function fadeAudio(audio, target) {
-        clearInterval(fadeInterval);
-        fadeInterval = setInterval(() => {
-            if (audio.volume < target - 0.05) audio.volume += 0.05;
-            else if (audio.volume > target + 0.05) audio.volume -= 0.05;
-            else { audio.volume = target; clearInterval(fadeInterval); }
-        }, 50);
+        } else { video.pause(); }
     }
 
     function typeWriter(text, elId, speed) {
-        let i = 0, el = document.getElementById(elId), target = el;
+        let i = 0, el = document.getElementById(elId), activeTarget = el;
         function type() {
             if (i < text.length) {
                 if (text[i] === '<') {
                     let end = text.indexOf('>', i);
                     let tag = text.substring(i, end + 1);
                     i = end + 1;
-                    if (tag.startsWith('</')) { target = el; } 
-                    else if (tag.includes('br')) { el.innerHTML += '<br>'; }
-                    else {
+                    if (tag.startsWith('</')) { 
+                        activeTarget = el; 
+                    } else if (tag.includes('br')) { 
+                        el.innerHTML += '<br>'; 
+                    } else {
                         let span = document.createElement('span');
                         let match = tag.match(/class=['"]([^'"]+)['"]/);
                         if (match) span.className = match[1];
                         el.appendChild(span);
-                        target = span;
+                        activeTarget = span;
                     }
                     type();
                 } else {
-                    target.innerHTML += text[i];
+                    activeTarget.innerHTML += text[i];
                     i++;
                     setTimeout(type, speed);
                 }
